# reshala_client_rs_wasm

./: .gitignore  Cargo.toml
src/: lib.rs
src/dto/: mod.rs
src/types/: mod.rs  slot.rs  slots_component.rs  subject.rs  task.rs  tasks_component.rs  transaction.rs  user.rs
