[package]
name = "reshala_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = {version="0.11.18", features = ["json", "blocking"]}
wasm-bindgen = "0.2.87"
